--- a/modules-ui/resources/src/main/res/values/strings.xml
+++ b/modules-ui/resources/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Streeek</string>
     <string name="profile">Profile</string>
+    <string name="select_team_visibility">Select Team Visiblity</string>
 </resources>
