--- a/modules-ui/resources/src/main/res/values/strings.xml
+++ b/modules-ui/resources/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="app_name">Streeek</string>
     <string name="profile">Profile</string>
     <string name="select_team_visibility">Select Team Visiblity</string>
+    <string name="no_issues_found">No Issues found! </string>
+    <string name="message_no_issues">We couldn\'t find any issues matching your criteria, try something else</string>
 </resources>
