--- a/modules-ui/resources/src/main/res/values/strings.xml
+++ b/modules-ui/resources/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="no_issues_found">No Issues found! </string>
     <string name="message_no_issues">We couldn\'t find any issues matching your criteria, try something else</string>
     <string name="invalid_team_name">Name can\'t have uppercase, space, symbols and length should be more than 4</string>
+    <string name="invalid_reminder_label">length should be more than 3</string>
 </resources>
